part1/ex1.12/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gopic-svc
spec:
  type: ClusterIP
  selector:
    app: gopic
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
